--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="header3 cid-r4x8AwfDh1 mbr-fullscreen" id="header3-0">
+<section class="header3 cid-r4x8AwfDh1" id="header3-0">
 
     
 
@@ -99,7 +99,7 @@
 Met vriendelijke groet,
 
 Het Team Amsterdammers Helpen</div>
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A7+anggjxKLSICxfCCx4wOTTszfj0OrmX5Npz9j7YccvJZjoHoI+dzXTkwd3uA81KkNQJCZcN7M5Zj2ICEScQyttGQ0Pv2XdRQy4ClG+1Ffbp6IukvNGTdcOyrXYbT7L">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EE74LAQgexgdrAhW5xj5E5aAUXcVWXCdNRcmNxkA2PMs153VvhoaLdKFOtgPs3Bfs9nRKqCZJ3loOMtUzVWElHnBSkAvLTGOAgsMUN1u0H0R1BkgfV1MsIIjuKuRvWHV">
                         <div class="mbr-subscribe input-group">
                             <input class="form-control rounded-left" type="email" name="email" placeholder="Email adress..." data-form-field="Email" required="" id="email-header3-0">
                             <span class="input-group-btn mbr-section-btn"><button href="" type="submit" class="btn btn-info rounded-right display-7">MEER INFO GRAAG!</button></span>
@@ -110,7 +110,7 @@ Het Team Amsterdammers Helpen</div>
             </div>
             <div class="col-lg-6 align-left img-block">
                 <div class="mbr-figure">
-                    <img src="assets/images/shutterstock-525045907-1080x720.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/shutterstock-525045907-1080x720.jpeg" alt="Mobirise" title="">
                 </div>
             </div>
         </div>
@@ -159,9 +159,9 @@ Het Team Amsterdammers Helpen</div>
      
             <div class="mbr-figure col-lg-5">
             	<div class="mbr-figure__img">
-                    <img src="assets/images/shutterstock-525045907-950x633.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/knipsel-969x597.png" alt="Mobirise" title="">
                 </div>
-            	<p class="mbr-fonts-style m-0 mbr-text card-text mbr-white display-5">De ‘nieuwe daklozen’ kunnen zich eigenlijk best redden, als snel hulp wordt geboden.<br><br>In de praktijk ontbreekt het daar vaak aan. Nieuwe daklozen krijgen vaak te horen dat ze hun problemen zelf moeten oplossen, of binnen hun netwerk.&nbsp;<br></p>
+            	<p class="mbr-fonts-style m-0 mbr-text card-text mbr-white display-5">De ‘nieuwe daklozen’ kunnen zich eigenlijk best redden, als snel hulp wordt geboden.<br><br>In de praktijk ontbreekt het daar vaak aan. <br><br>Nieuwe daklozen krijgen vaak te horen dat ze hun problemen zelf moeten oplossen.<br></p>
             </div>
 
         </div>
@@ -249,6 +249,53 @@ Het Team Amsterdammers Helpen</div>
             </div>
         </div>
     </div>
+</section>
+
+<section class="features5 cid-rvFNk6djun" id="features5-3u">
+
+	
+
+	
+	<div class="container">
+		
+		
+
+		<div class="row justify-content-left">
+			<div class="col-md-6 row-item col-lg-4">
+				<div class="wrapper card1">
+					<h4 class="mbr-fonts-style mbr-card-title align-left mbr-white display-5">Retargeting Market</h4>
+
+					<p class="mbr-text mbr-fonts-style align-left display-7">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit.</p>
+                    <div class="mbr-section-btn align-left">
+                        <a class="btn-underline mr-3 text-white display-4" href="https://mobirise.com">Read More</a>
+                    </div>
+				</div>
+			</div>
+
+			<div class="col-md-6 row-item col-lg-4">
+				<div class="wrapper card2">
+					<h4 class="mbr-fonts-style mbr-card-title align-left mbr-white display-5">Fruitful Results</h4>
+
+					<p class="mbr-text mbr-fonts-style align-left display-7">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit.</p>
+                    <div class="mbr-section-btn align-left">
+                        <a class="btn-underline text-white mr-3 display-4" href="https://mobirise.com">Read More</a>
+                    </div>
+				</div>
+			</div>
+
+			<div class="col-md-6 row-item col-lg-4">
+				<div class="wrapper card3">
+					<h4 class="mbr-fonts-style mbr-card-title align-left mbr-white display-5">Instant Solutions</h4>
+					<p class="mbr-text mbr-fonts-style align-left display-7">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit.</p>
+                    <div class="mbr-section-btn align-left">
+                        <a class="btn-underline text-white mr-3 display-4" href="https://mobirise.com">Read More</a>
+                    </div>
+				</div>
+			</div>
+
+			
+		</div>
+	</div>
 </section>
 
 <section class="accordion1 cid-r5f10zHHry" id="accordion1-3o">
@@ -354,7 +401,7 @@ Het Team Amsterdammers Helpen</div>
     <div class="container">
         <div class="media-container-row title">
             <div class="col-md-10 col-lg-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="faq.html#features12-1q">Kijk hier voor alle FAQ</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="faq.html#features12-1q">Kijk hier naar alle FAQ</a></div>
             </div>
         </div>
     </div>
